# leo-handover-ai-optimizer

./: .gitignore  DATA_NOTICE.md  DISCLAIMER.md  LICENSE  Makefile  README.md  README_KO.md  README_UPLOAD_KO.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
demo/: DEMO_GUIDE_KO.md  demo_request.json  sample_candidates.csv
docs/: BUILD_NOTES_KO.md  DATA_CARD.md  GITHUB_PUSH_GUIDE_KO.md  MODEL_CARD.md  PORTFOLIO_PLAYBOOK_KO.md  PRODUCTION_GAP_KO.md  PROJECT_CARD_KO.md  RUN_REPORT.md  evaluation_metrics_example.json  simulation_design.md
scripts/: 01_generate_dataset.py  02_train_model.py  03_evaluate_policy.py  04_make_visuals.py  05_explain_epoch.py  06_make_report.py  run_full_pipeline.sh
src/leo_handover/: __init__.py  api.py  cli.py  config.py  evaluation.py  explainability.py  features.py  models.py  oracle.py  orbital_geometry.py  simulator.py
tests/: test_api_contract.py  test_explainability.py  test_features.py  test_policy.py  test_simulator.py
